# ebmify

./: .gitignore  README.md  download_cifar.py  download_mnist.py  download_openwebtext.py  pyproject.toml
example/cifar/: LEVERAGE_FINDINGS.md  README.md  _paths.py  cifar_data.py  cifar_vae_langevin.py  cifar_vae_ood_eval.py  cifar_vae_train.py
example/cifar/archive/: cifar_resnet_ood_threshold.py  cifar_vae_ood_ell_sweep.py  cifar_vae_ood_eval.py
example/cifar/coreset/: README.md  _artifacts.py  _aux_losses.py  _extract_common.py  cifar_build_coreset_random.py  cifar_build_coreset_ssl.py  cifar_build_coreset_supervised.py  cifar_eval_from_artifacts.py  (+4 more)
example/dka/: README.md  _paths.py  failure.txt  sanity.py
example/hetero/: hetero_demo_2d_ood.py  hetero_demo_2d_ood_checkerboard.py  hetero_demo_2d_ood_checkerboard_langevin.py  hetero_demo_2d_ood_deep_rff.py  hetero_demo_2d_ood_deep_rff_langevin.py  hetero_demo_2d_ood_moons.py  hetero_demo_2d_ood_petal.py  hetero_demo_2d_ood_petal_gmm.py  hetero_demo_2d_ood_petal_langevin.py  random_features_2d_density.py
example/mnist/: mnist_vae_langevin.py  mnist_vae_ood_eval.py  mnist_vae_sanity.py  mnist_vae_train.py
example/openwebtext_lm/: README.md  _paths.py  model.py  owt_data.py  prepare.py
example/wm_benchmark/: ATTRIBUTION.md  README.md  _paths.py  requirements.txt
src/coreset/: README.md  __init__.py  aux_targets.py  cli.py  eig.py  greedy.py  leverage.py  plots.py  preprocess.py  spectral_rank.py
src/dynsys/: acrobot.py  ballandplate.py  furuta.py  ode_solver.py  quadcopter.py
src/ebmify/models/: dka.py  (+7 more)
(+162 files in other folders)
